# legend-shared

legend-shared-opentracing-base/: BUILD.bazel
legend-shared-opentracing-jersey/: BUILD.bazel
legend-shared-opentracing-servlet-filter/: BUILD.bazel
legend-shared-opentracing-test/: BUILD.bazel
legend-shared-pac4j/: BUILD.bazel
legend-shared-pac4j-gitlab/: BUILD.bazel
legend-shared-pac4j-kerberos/: BUILD.bazel
legend-shared-pac4j-ping/: BUILD.bazel
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/: BUILD.bazel  LegendClientFinder.java  LegendPac4jBundle.java  SerializationHelper.java
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/hazelcaststore/: BUILD.bazel  HazelcastSessionStore.java
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/internal/: AcceptHeaderAjaxRequestResolver.java  BUILD.bazel  HttpSessionStore.java  NullSessionStore.java
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/kerberos/: BUILD.bazel
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/mongoauthorizer/: BUILD.bazel  MongoDbAuthorizer.java
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/mongostore/: BUILD.bazel  MongoDbSessionStore.java
legend-shared-pac4j/src/main/java/org/finos/legend/server/pac4j/sessionutil/: BUILD.bazel
legend-shared-pac4j/src/test/java/org/finos/legend/server/pac4j/: LegendPac4JBundleTest.java
legend-shared-server/: BUILD.bazel
legend-shared-server/src/main/java/org/finos/legend/server/shared/bundles/: BUILD.bazel  ChainFixingFilterHandler.java
legend-shared-server/src/main/java/org/finos/legend/server/shared/localassets/: BUILD.bazel
legend-shared-server/src/main/java/org/finos/legend/server/shared/staticserver/: BUILD.bazel
legend-shared-server/src/test/java/org/finos/legend/server/shared/bundles/: HtmlRouterRedirectBundleTest.java  OpenTracingBundleTest.java
legend-shared-server/src/test/java/org/finos/legend/server/shared/localassets/: LocalAssetServletTest.java
