load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-shared-opentracing-base",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_opentracing_opentracing_api",
        "@maven//:io_opentracing_opentracing_util",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:io_zipkin_reporter2_zipkin_reporter",
        "@maven//:io_zipkin_zipkin2_zipkin",
        "@maven//:io_opentracing_brave_brave_opentracing",
        "@maven//:io_zipkin_brave_brave",
    ],
)
