load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-shared-opentracing-base",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@legend_maven//:io_opentracing_opentracing_api",
        "@legend_maven//:io_opentracing_opentracing_util",
        "@legend_maven//:org_slf4j_slf4j_api",
        "@legend_maven//:javax_ws_rs_javax_ws_rs_api",
        "@legend_maven//:com_fasterxml_jackson_core_jackson_databind",
        "@legend_maven//:com_google_guava_guava",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:io_zipkin_reporter2_zipkin_reporter",
        "@legend_maven//:io_zipkin_zipkin2_zipkin",
        "@legend_maven//:io_opentracing_brave_brave_opentracing",
        "@legend_maven//:io_zipkin_brave_brave",
    ],
)
