load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-shared-opentracing-servlet-filter",
    srcs = glob(["src/main/java/**/*.java"]),
    # resources = glob(["src/main/resources/**"]), # Assuming empty based on others
    visibility = ["//visibility:public"],
    deps = [
        "@legend_maven//:io_opentracing_opentracing_api",
        "@legend_maven//:io_opentracing_opentracing_util",
        "@legend_maven//:io_opentracing_opentracing_noop",
        "@legend_maven//:javax_servlet_javax_servlet_api",
        "@legend_maven//:javax_ws_rs_javax_ws_rs_api",
        "@legend_maven//:io_opentracing_contrib_opentracing_jaxrs2", # Likely needed for ServerTracingInterceptor
        "@legend_maven//:org_eclipse_jetty_jetty_server",
        "@legend_maven//:org_eclipse_jetty_jetty_servlet",
        "@legend_maven//:org_slf4j_slf4j_api",
        "@legend_maven//:io_prometheus_simpleclient",
    ],
)
