load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-shared-pac4j-ping",
    srcs = [
        "src/main/java/org/finos/legend/server/pac4j/ping/PingDirectClient.java",
        "src/main/java/org/finos/legend/server/pac4j/ping/PingIndirectClient.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-shared/legend-shared-pac4j",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_nimbusds_nimbus_jose_jwt",
        "@maven//:org_pac4j_pac4j_http",
        "@maven//:org_pac4j_pac4j_oidc",
        "@maven//:org_pac4j_pac4j_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
