load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "internal",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@legend_maven//:javax_servlet_javax_servlet_api",
        "@legend_maven//:org_pac4j_pac4j_core",
        "@legend_maven//:org_pac4j_jee_pac4j",
        "@legend_maven//:org_eclipse_jetty_jetty_servlet",
        "@legend_maven//:org_eclipse_jetty_jetty_util",
        "@legend_maven//:com_google_guava_guava",
        "@legend_maven//:org_commonjava_mimeparse_mimeparse",
        "@legend_maven//:org_eclipse_jetty_jetty_security",
        "@legend_maven//:org_eclipse_jetty_jetty_server",
    ],
)
