load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "kerberos",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@legend_maven//:com_google_guava_guava", 
        # SubjectExecutor uses javax.security.auth which is JDK, but maybe Guava is used.
    ],
)
