load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "bundles",
    srcs = [
        "ChainFixingFilterHandler.java",
        "CorsBundleWrapper.java",
        "HostnameHeaderBundle.java",
        "HtmlRouterRedirectBundle.java",
        "LocalAssetBundle.java",
        "OpenTracingBundle.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-shared/legend-shared-server/src/main/java/org/finos/legend/server/shared/localassets",
        "//legend-shared/legend-shared-opentracing-base",
        "//legend-shared/legend-shared-opentracing-jersey",
        "//legend-shared/legend-shared-opentracing-servlet-filter",
        "//legend-shared/legend-shared-pac4j",
        "@legend_maven//:io_dropwizard_dropwizard_core",
        "@legend_maven//:io_dropwizard_dropwizard_lifecycle",
        "@legend_maven//:io_dropwizard_dropwizard_servlets",
        "@legend_maven//:javax_servlet_javax_servlet_api",
        "@legend_maven//:javax_ws_rs_javax_ws_rs_api",
        "@legend_maven//:com_google_guava_guava",
        "@legend_maven//:io_opentracing_opentracing_api",
        "@legend_maven//:io_opentracing_opentracing_util",
        "@legend_maven//:io_opentracing_contrib_opentracing_jaxrs2",
        "@legend_maven//:org_eclipse_jetty_jetty_servlets",
        "@legend_maven//:org_eclipse_jetty_jetty_servlet",
        "@legend_maven//:org_eclipse_jetty_jetty_http",
        "@legend_maven//:org_eclipse_jetty_jetty_server",
        "@legend_maven//:javax_annotation_javax_annotation_api",
    ],
)
