load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "localassets",
    srcs = ["LocalAssetServlet.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:com_google_guava_guava",
        "@maven//:io_dropwizard_dropwizard_servlets",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
)
