load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "localassets",
    srcs = ["LocalAssetServlet.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@legend_maven//:javax_servlet_javax_servlet_api",
        "@legend_maven//:com_google_guava_guava",
        "@legend_maven//:io_dropwizard_dropwizard_servlets",
        "@legend_maven//:javax_ws_rs_javax_ws_rs_api",
    ],
)
