load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "staticserver",
    srcs = [
        "Server.java",
        "StaticHealthcheck.java",
        "StaticServerBundle.java",
        "StaticServerConfiguration.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-shared/legend-shared-server/src/main/java/org/finos/legend/server/shared/bundles",
        "//legend-shared/legend-shared-server/src/main/java/org/finos/legend/server/shared/localassets",
        "//legend-shared/legend-shared-pac4j",
        "@legend_maven//:io_dropwizard_dropwizard_core",
        "@legend_maven//:io_dropwizard_dropwizard_util",
        "@legend_maven//:io_dropwizard_dropwizard_lifecycle",
        "@legend_maven//:io_dropwizard_dropwizard_configuration",
        "@legend_maven//:io_dropwizard_metrics_metrics_healthchecks",
        "@legend_maven//:org_eclipse_jetty_jetty_server",
        "@legend_maven//:org_eclipse_jetty_jetty_servlet",
        "@legend_maven//:org_eclipse_jetty_jetty_servlets",
         "@legend_maven//:com_fasterxml_jackson_core_jackson_annotations",
         "@legend_maven//:javax_servlet_javax_servlet_api",
         "@legend_maven//:com_google_guava_guava",
         "@legend_maven//:org_eclipse_jetty_jetty_http",
    ],
)
